# cluster_audit

./: .gitignore  AGENTS.md  README.md  Taskfile.yaml  audit_dashboard.py  k8s_rbac_analyzer.py  pyproject.toml  pyrightconfig.json  quick_pods.py  rancher_project_users.py  real_usage_analysis.py  resource_audit.py  simple_rancher_analyzer.py  simple_resource_table.py  weekly_audit_review.sh
config/: ovh_prices.toml
docs/: ARCHITECTURE.md  CODE_REVIEW.md  CODING_GUIDELINES.md
notebooks/: project_users_export.py  snippets_sheets.py  сluster_visualization.py
scripts/: cronjobs.sh
src/mks/: __init__.py  config.py
src/mks/application/: __init__.py  _ovh_session.py  _resource_audit_models.py  _resource_audit_reports.py  _step_report.py  billing_export_service.py  billing_export_use_case.py  capacity_plan_service.py  capacity_plan_use_case.py  cluster_inventory_service.py  cluster_inventory_use_case.py  dashboard_summary_service.py  dashboard_summary_use_case.py  deletion_investigation_service.py  deletion_investigation_use_case.py  pod_density_summary_service.py  pod_density_summary_use_case.py  prices_refresh_service.py  prices_refresh_use_case.py  rancher_project_overview_service.py  rancher_project_overview_use_case.py  rancher_users_export_service.py  rancher_users_export_use_case.py  rbac_audit_service.py  rbac_audit_use_case.py  resource_audit_service.py  resource_audit_use_case.py  rightsizing_service.py  rightsizing_use_case.py  run_writer.py  spend_forecast_service.py  spend_forecast_use_case.py  stdout_renderer.py  upgrade_readiness_service.py  upgrade_readiness_use_case.py  usage_efficiency_service.py  usage_efficiency_use_case.py  use_case_utils.py  waste_scan_service.py  waste_scan_use_case.py  (+2 more)
src/mks/audit/: dashboard.py  investigate_deletions.py  pod_density.py  rancher_projects.py  rbac.py  real_usage.py  resource.py  workload.py
src/mks/backends/: rancher.py  rancher_users.py
src/mks/cli/: main.py
src/mks/core/: kubectl.py  namespace_filter.py  parsers.py
src/mks/domain/: billing.py  namespace_policy.py  pod_reporting.py  quantity_parser.py  rancher_namespace.py
src/mks/infrastructure/: kubectl_client.py  ovh_client.py  prometheus_client.py  rancher_client.py
tests/: test_backend_rancher.py  test_config.py  test_core_kubectl.py  test_core_namespace_filter.py  test_core_parsers.py  test_run_writer.py
